# pyo3-demo

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
examples/: run_web_server.py  sum_as_string.py
python/pyo3_demo/: __init__.py
src/: lib.rs
