[package]
name = "pyo3-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_demo"
crate-type = ["cdylib"]

[dependencies]
axum = "0.7.4"
pyo3 = "0.20.3"
tokio = { version = "1.0", features = ["full"] }
